# VisionGlove_by_Grok

./: .gitignore  CMakeLists.txt  COMPARISON.md  README.md  build.bat  build.ps1  conversation_transcript.txt
config/: config.json  sample_serial_feed.txt
docs/: ARCHITECTURE_ONE_PAGER.md  BEGINNER_EXERCISE_01_CONFIG.md  BEGINNER_EXERCISE_02_GESTURE.md  BEGINNER_EXERCISE_03_SERIAL.md  CHEETAH_MAPPING.md  SENSING_POLICY.md  STIMULUS_TO_SMS.md
include/visionglove/: comms.hpp  config.hpp  glove_system.hpp  haptics.hpp  logger.hpp  ring_buffer.hpp  security.hpp  sensors.hpp  serial_stub.hpp  types.hpp  vision.hpp
src/: comms.cpp  config.cpp  glove_system.cpp  haptics.cpp  logger.cpp  main.cpp  security.cpp  sensors.cpp  serial_stub.cpp  vision.cpp
